apiv1/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: create-ms
                port:
                  number: 80
          - path: /read
            pathType: Prefix
            backend:
              service:
                name: read-ms
                port:
                  number: 80
          - path: /update
            pathType: Prefix
            backend:
              service:
                name: update-ms
                port:
                  number: 80
          - path: /delete
            pathType: Prefix
            backend:
              service:
                name: delete-ms
                port:
                  number: 80
